#2 Mark completed sub tasks.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -7,7 +7,7 @@ This is no lawyer advice, the following only represents some contributor opinion
 * DONE Determine licensing.
   * DONE Determine licensing for software code.
   * DONE Determine licensing for documentation.
-* TODO Implement licensing.
+* DONE Implement licensing.
   * DONE Add copy of licenses to repo.
   * DONE Determine license obligations.
   * DONE Templates
@@ -27,9 +27,8 @@ This is no lawyer advice, the following only represents some contributor opinion
     * DONE net.splitcells.system
     * DONE net.splitcells.website.default.content
     * DONE net.splitcells.website.server
-  * TODO Fulfill license obligations.
-   * TODO Render license info in website.
-   * TODO Consider all licenses in notice file.
+  * DONE Fulfill license obligations.
+   * DONE Consider all licenses in notice file.
   * DONE Document third party content licensing.
     * DONE net.splitcells.dem
     * DONE net.splitcells.gel
@@ -48,12 +47,12 @@ This is no lawyer advice, the following only represents some contributor opinion
     * DONE net.splitcells.os.state.interface
     * DONE net.splitcells.os.state.interface.lib
   * DONE Determine secondary licensing requirements.
-  * TODO Create attributions files for not bundled third party content.
-  * TODO Create guidelines for notice and license file.
-  * TODO Note needed changes for future binary distributions.
-  * TODO Create top level legal document, where everything relevant including
+  * DONE Create attributions files for not bundled third party content.
+  * DONE Create guidelines for notice and license file.
+  * DONE Note needed changes for future binary distributions.
+  * DONE Create top level legal document, where everything relevant including
     tickets are linked.
-  * TODO Have copies of all relevant licenses.
+  * DONE Have copies of all relevant licenses.
 * DONE Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
 
