#2 Mark task as completed.

--- a/src/main/md/net/splitcells/network/tickets/done/2.md
+++ b/src/main/md/net/splitcells/network/tickets/done/2.md
@@ -54,7 +54,7 @@ This is no lawyer advice, the following only represents some contributor opinion
     tickets are linked.
   * DONE Have copies of all relevant licenses.
 * DONE Organize contributions.
-* TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
+* DONE Sign project and document project founder's (Mārtiņš Avots) public keys.
 
 Following sites were used as a kind of general guide:
 
