#58 Add link to source.

--- a/projects/net.splitcells.gel.doc/src/main/md/net/splitcells/gel/problem/theory/assignment/problem/bibliography/1995.DISKI.md
+++ b/projects/net.splitcells.gel.doc/src/main/md/net/splitcells/gel/problem/theory/assignment/problem/bibliography/1995.DISKI.md
@@ -1,3 +1,4 @@
+From: https://www.semanticscholar.org/paper/Konfigurierbare-Probleml%C3%B6sungsmethoden-am-Beispiel-Poeck/a4bde1fc431f30aaf5c63bd643c58ba10606afdd
 ```
 @inproceedings{Poeck1995KonfigurierbarePA,
   title={Konfigurierbare Probleml{\"o}sungsmethoden am Beispiel der Problemklassen - Zuordnung und Diagnostik},
