#86 Update licensing ticket info.

--- a/src/main/md/net/splitcells/network/tickets/done/2.md
+++ b/src/main/md/net/splitcells/network/tickets/done/2.md
@@ -62,6 +62,14 @@ Following sites were used as a kind of general guide:
 * [The Eclipse Project Handbook](https://www.eclipse.org/projects/handbook/)
 * [Eclipse IP Management Modernization by Sharon Corbett](https://www.eclipsecon.org/sites/default/files/slides/IP%20Management%20Modernization.pdf)
 
+# History
+
+With the ticket [#86](https://github.com/www-splitcells-net/net.splitcells.network/issues/86) 
+the GPL licensing was removed,
+because the dependencies of the project are not compatible with GPL.
+With the ticket [#88](https://github.com/www-splitcells-net/net.splitcells.network/issues/88)
+GPL compatibility is planned for the core code.
+
 # Determine licensing.
 
 When referring to a license use its full name or its SPDX-License-Identifier.
