--- a/src/main/md/net/splitcells/network/tickets/done/2.md
+++ b/src/main/md/net/splitcells/network/tickets/done/2.md
@@ -248,7 +248,21 @@ __authors__ = ["and other"]
 __copyright__ = "Copyright 2021"
 __license__ = "EPL-2.0 OR MIT"
 ```
-> This is the license header for 
+> This is the license header for Python 3 files.
+ 
+```
+<!--
+Copyright (c) 2021 Mārtiņš Avots (Martins Avots) and others
+
+This program and the accompanying materials are made available under the
+terms of the Eclipse Public License 2.0, which is available at
+http://www.eclipse.org/legal/epl-2.0, or the MIT License,
+which is available at https://spdx.org/licenses/MIT.html.
+
+SPDX-License-Identifier: EPL-2.0 OR MIT
+-->
+```
+> This is the license header template for HTML files.
 
 ### License File
 
