#99 Add licensing metadata to layout/XSL files.

--- a/src/main/md/net/splitcells/network/tickets/done/2.md
+++ b/src/main/md/net/splitcells/network/tickets/done/2.md
@@ -262,7 +262,7 @@ which is available at https://spdx.org/licenses/MIT.html.
 SPDX-License-Identifier: EPL-2.0 OR MIT
 -->
 ```
-> This is the license header template for HTML files.
+> This is the license header template for HTML and XML files.
 
 ### License File
 
