--- a/projects/net.splitcells.network.blog/src/main/hugo/content/blog/index.gmi
+++ b/projects/net.splitcells.network.blog/src/main/hugo/content/blog/index.gmi
@@ -6,10 +6,10 @@
 
 ## Articles
 
-=> gemini://splitcells-net.srht.site/2021-08-10-Developing-Software-At-Gunpoint-Weak-Copy-Left-Versus-Pseudo-Permissive.gmi 2021-08-10 Developing Software At Gunpoint Weak Copy Left Versus Pseudo Permissive
+=> gemini://splitcells-net.srht.site/2021-08-10-Developing-Software-At-Gunpoint-Weak-Copy-Left-Versus-Pseudo-Permissive.gmi 2021-08-10: Developing Software At Gunpoint Weak Copy Left Versus Pseudo Permissive
 
-=> gemini://splitcells-net.srht.site/2021-08-6-Its-over-Its-finnally-over.gmi 2021-08-6 Its over Its finnally over
+=> gemini://splitcells-net.srht.site/2021-08-6-Its-over-Its-finnally-over.gmi 2021-08-06: Its over Its finnally over
 
-=> gemini://splitcells-net.srht.site/2021-07-20-Pulling-The-Rip-Line.gmi 2021-07-20 Pulling The Rip Line
+=> gemini://splitcells-net.srht.site/2021-07-20-Pulling-The-Rip-Line.gmi 2021-07-20: Pulling The Rip Line
 
-=> gemini://splitcells-net.srht.site/2021-07-07-Creating-The-First-Public-Release.gmi 2021-07-07 Creating The First Public Release
+=> gemini://splitcells-net.srht.site/2021-07-07-Creating-The-First-Public-Release.gmi 2021-07-07: Creating The First Public Release
