--- a/projects/net.splitcells.network.blog/src/main/hugo/content/blog/index.gmi
+++ b/projects/net.splitcells.network.blog/src/main/hugo/content/blog/index.gmi
@@ -12,6 +12,10 @@ TODO: Add nice ASCII art.
 
 ## Articles
 
+=> gemini://splitcells-net.srht.site/2021-10-04-There-Is-Bad-There-Is-Horrible-And-Than-There-is-Error-Handling.gmi 2021-10-04 There Is Bad There Is Horrible And Than There is Error Handling
+
+=> gemini://splitcells-net.srht.site/2021-10-04-Development-Timing-And-Discovery-Based-Networks-Of-Perspectives.gmi 2021-10-04 Development Timing And Discovery Based Networks Of Perspectives
+
 => gemini://splitcells-net.srht.site/2021-08-10-Developing-Software-At-Gunpoint-Weak-Copy-Left-Versus-Pseudo-Permissive.gmi 2021-08-10: Developing Software At Gunpoint Weak Copy Left Versus Pseudo Permissive
 
 => gemini://splitcells-net.srht.site/2021-08-6-Its-over-Its-finnally-over.gmi 2021-08-06: Its over Its finnally over
