--- a/projects/net.splitcells.dem/src/main/xml/net/splitcells/dem/lang/perspective/guidelines/perspectives.xml
+++ b/projects/net.splitcells.dem/src/main/xml/net/splitcells/dem/lang/perspective/guidelines/perspectives.xml
@@ -59,8 +59,8 @@
     <chapter>
         <title>Minimize Size of Perspectives</title>
         <paragraph>The smaller a perspective is, the easier it is, to split a perspective path
-            in many smaller parts. This in turn makes it easier to construct such paths.
-            Additionally this makes it easier to create a new branch of the path, with minimal changes.
+            into more smaller parts. This in turn makes it easier to construct such paths.
+            Additionally, this makes it easier to create a new branch of the path, with minimal changes.
             Furthermore, it gets easier and faster to select fitting children, when the size of the perspective is
             decreased,
             provided a fast evaluation of network traversal's direction.
@@ -71,6 +71,7 @@
             in order to make it clear, that these are lists.
             Thereby, perspectives, where it is hard to determine the searched path, are more separated from
             the rest of the network. This in turn makes the management of complexity more easy.
+            Such perspectives can be viewed as archives, general storage or namespaces.
         </paragraph>
     </chapter>
     <chapter>
