Create new ASCII logo.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.network.blog/src/main/hugo/content/blog/index.gmi
+++ b/projects/net.splitcells.network.blog/src/main/hugo/content/blog/index.gmi
@@ -1,12 +1,10 @@
 # Splitcells Network Blog
 
 ```
-                .                            .    .
-               /    .-.    /                /    /                        /
-    .   .-.   /     `-'---/---.-.    .-.   /    /   .     .  .-.   .-.---/---
-   / \  /  ) /     /     /   (     ./.-'_ /    /   / \ .-. )/   )./.-'_ /
-  / ._)/`-'_/_.-_.(__.  /     `---'(__.'_/_.-_/_.-/ ._)`-''/   ( (__.' /
- /    /                                          /              `-
+===========|===|=====
+ splitcells|net|blog
+-----------|---|-----
+           .   .
 ```
 
 > Together we are more than the sum of our cells.
