#138 Write about the new release and related thoughts.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.network.blog/src/main/hugo/content/blog/index.gmi
+++ b/projects/net.splitcells.network.blog/src/main/hugo/content/blog/index.gmi
@@ -17,7 +17,9 @@
 
 ## Articles
 
-=> gemini://splitcells-net.srht.site/2022-01-10-A-Case-For-Repo-Process.gmi 2022-01-10 2022-01-10 A Case For Repo Process
+=> gemini://splitcells-net.srht.site/2022-02-15-Generic-Allocators-Fourth-Version.gmi 2022-02-15 Generic Allocators Fourth Version
+
+=> gemini://splitcells-net.srht.site/2022-01-10-A-Case-For-Repo-Process.gmi 2022-01-10 A Case For Repo Process
 
 => gemini://splitcells-net.srht.site/2021-10-04-There-Is-Bad-There-Is-Horrible-And-Then-There-is-Error-Handling.gmi 2021-10-04 There is the bad, there is the horrible, and then there is <sight> error handling.
 
