--- a/projects/net.splitcells.dem/src/main/xml/net/splitcells/dem/lang/perspective/guidelines/networks.xml
+++ b/projects/net.splitcells.dem/src/main/xml/net/splitcells/dem/lang/perspective/guidelines/networks.xml
@@ -49,4 +49,23 @@
             and therefore network. It may be enough to use virtual networks.
         </paragraph>
     </chapter>
+    <chapter><title>Namespace</title>
+        <paragraph>All paths starting of the network's root node,
+            are the namespace of the network.
+            Each path acts as a unique identifier of the namespace.
+            This can also be called root namespace in order to differentiate it from virtual namespaces.</paragraph>
+    </chapter>
+    <chapter>
+        <title>Virtual Namespace</title>
+        <paragraph>A virtual namespace is a prefix shared by multiple paths,
+            where the last element of the prefix is the root node of the namespace.
+            All paths starting from this root node represent the virtual namespace.
+            The concept of virtual namespaces can be used in order to store multiple networks inside one.
+            </paragraph>
+        <paragraph>Consider <quote>splitcells.net</quote> for instance:
+            <quote>https://splitcells.net/net/</quote> is the root namespace of the site,
+            whereas <qutoe>https://localhost:8445/net/splitcells/website/minimal/</qutoe> contains a copy of the site,
+            but with a different theme.
+        </paragraph>
+    </chapter>
 </article>
