Clearify chapter title.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.dem/src/main/xml/net/splitcells/dem/lang/perspective/guidelines/networks.xml
+++ b/projects/net.splitcells.dem/src/main/xml/net/splitcells/dem/lang/perspective/guidelines/networks.xml
@@ -14,7 +14,7 @@
             can be very advantages.</d:toDo>
     </meta>
     <chapter>
-        <title>Gate to Heaven</title>
+        <title>Network Discoverability</title>
         <paragraph>Every path to a specific perspective in the network can be viewed as a story of discovery:
             travelers wandering through the network searching for their destination.
             Everyone has their target(s).
