Link to interesting third party license policy.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/src/main/md/net/splitcells/network/tickets/done/2.md
+++ b/src/main/md/net/splitcells/network/tickets/done/2.md
@@ -388,3 +388,7 @@ The `CONTRIBUTING.md` and the `Developer_Certificate_of_Origin.v1.1.txt`
 are used as contribution guidelines.
 Support information and tutorials will also be added
 as they are needed.
+
+# Interesting Third Party Documents
+
+* [ASF 3rd Party License Policy](https://www.apache.org/legal/resolved.html)
