--- a/src/main/md/net/splitcells/network/tickets/done/2.md
+++ b/src/main/md/net/splitcells/network/tickets/done/2.md
@@ -211,7 +211,7 @@ For short Bash/sh scripts a license header is not required.
 
 ```
 /*
- * Copyright (c) 2021 Mārtiņš Avots (Martins Avots) and others
+ * Copyright (c) Contributors To This File
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License 2.0, which is available at
@@ -219,12 +219,13 @@ For short Bash/sh scripts a license header is not required.
  * which is available at https://spdx.org/licenses/MIT.html.
  *
  * SPDX-License-Identifier: EPL-2.0 OR MIT
+ * SPDX-FileCopyrightText: Contributors To This File
  */
 ```
 > This is the license header template for Java files.
 
 ```
-# Copyright (c) 2021 Mārtiņš Avots (Martins Avots) and others
+# Copyright (c) Contributors To This File
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Public License 2.0, which is available at
@@ -232,15 +233,21 @@ For short Bash/sh scripts a license header is not required.
 # which is available at https://spdx.org/licenses/MIT.html.
 #
 # SPDX-License-Identifier: EPL-2.0 OR MIT
+# SPDX-FileCopyrightText: Contributors To This File
 ```
 > This is the license header template for Bash and sh files.
  
 ```
 """
+Copyright (c) Contributors To This File
+
 This program and the accompanying materials are made available under the
 terms of the Eclipse Public License 2.0, which is available at
 http://www.eclipse.org/legal/epl-2.0, or the MIT License,
 which is available at https://spdx.org/licenses/MIT.html.
+
+SPDX-License-Identifier: EPL-2.0 OR MIT
+SPDX-FileCopyrightText: Contributors To This File
 """
 
 __author__ = "Mārtiņš Avots"
@@ -252,7 +259,7 @@ __license__ = "EPL-2.0 OR MIT"
  
 ```
 <!--
-Copyright (c) 2021 Mārtiņš Avots (Martins Avots) and others
+Copyright (c) Contributors To This File
 
 This program and the accompanying materials are made available under the
 terms of the Eclipse Public License 2.0, which is available at
@@ -260,6 +267,8 @@ http://www.eclipse.org/legal/epl-2.0, or the MIT License,
 which is available at https://spdx.org/licenses/MIT.html.
 
 SPDX-License-Identifier: EPL-2.0 OR MIT
+SPDX-FileCopyrightText: Contributors To This File
+
 -->
 ```
 > This is the license header template for HTML and XML files.
