--- a/src/main/md/net/splitcells/network/tickets/done/2.md
+++ b/src/main/md/net/splitcells/network/tickets/done/2.md
@@ -210,44 +210,21 @@ listed source code repository logs.
 For short Bash/sh scripts a license header is not required.
 
 ```
-/*
- * Copyright (c) Contributors To This File
- *
- * This program and the accompanying materials are made available under the
- * terms of the Eclipse Public License 2.0, which is available at
- * http://www.eclipse.org/legal/epl-2.0, or the MIT License,
- * which is available at https://spdx.org/licenses/MIT.html.
- *
- * SPDX-License-Identifier: EPL-2.0 OR MIT
- * SPDX-FileCopyrightText: Contributors To This File
- */
+SPDX-License-Identifier: EPL-2.0 OR MIT
+SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
 ```
 > This is the license header template for Java files.
 
 ```
-# Copyright (c) Contributors To This File
-#
-# This program and the accompanying materials are made available under the
-# terms of the Eclipse Public License 2.0, which is available at
-# http://www.eclipse.org/legal/epl-2.0, or the MIT License,
-# which is available at https://spdx.org/licenses/MIT.html.
-#
-# SPDX-License-Identifier: EPL-2.0 OR MIT
-# SPDX-FileCopyrightText: Contributors To This File
+SPDX-License-Identifier: EPL-2.0 OR MIT
+SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
 ```
 > This is the license header template for Bash and sh files.
  
 ```
 """
-Copyright (c) Contributors To This File
-
-This program and the accompanying materials are made available under the
-terms of the Eclipse Public License 2.0, which is available at
-http://www.eclipse.org/legal/epl-2.0, or the MIT License,
-which is available at https://spdx.org/licenses/MIT.html.
-
 SPDX-License-Identifier: EPL-2.0 OR MIT
-SPDX-FileCopyrightText: Contributors To This File
+SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
 """
 
 __author__ = "Mārtiņš Avots"
@@ -259,16 +236,8 @@ __license__ = "EPL-2.0 OR MIT"
  
 ```
 <!--
-Copyright (c) Contributors To This File
-
-This program and the accompanying materials are made available under the
-terms of the Eclipse Public License 2.0, which is available at
-http://www.eclipse.org/legal/epl-2.0, or the MIT License,
-which is available at https://spdx.org/licenses/MIT.html.
-
 SPDX-License-Identifier: EPL-2.0 OR MIT
-SPDX-FileCopyrightText: Contributors To This File
-
+SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
 -->
 ```
 > This is the license header template for HTML and XML files.
