--- a/src/main/md/net/splitcells/network/tickets/done/2.md
+++ b/src/main/md/net/splitcells/network/tickets/done/2.md
@@ -216,8 +216,8 @@ SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
 > This is the license header template for Java files.
 
 ```
-SPDX-License-Identifier: EPL-2.0 OR MIT
-SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
+# SPDX-License-Identifier: EPL-2.0 OR MIT
+# SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
 ```
 > This is the license header template for Bash and sh files.
  
