#78 Define license info format for CommonMark.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/src/main/md/net/splitcells/network/tickets/done/2.md
+++ b/src/main/md/net/splitcells/network/tickets/done/2.md
@@ -236,11 +236,21 @@ __license__ = "EPL-2.0 OR MIT"
  
 ```
 <!--
-SPDX-License-Identifier: EPL-2.0 OR MIT
-SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
+  SPDX-License-Identifier: EPL-2.0 OR MIT
+  SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
 -->
 ```
 > This is the license header template for HTML and XML files.
+
+```
+
+----
+SPDX-License-Identifier: EPL-2.0 OR MIT
+SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
+```
+> For CommonMark files the meta data should be at the end of the document,
+> because not every renderer can display meta data in a nice way.
+> The empty line at the start of the suffix ensures, that it is rendered correctly.
 
 ### License File
 
