Add missing license meta data.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/src/main/md/net/splitcells/network/tickets/done/2.md
+++ b/src/main/md/net/splitcells/network/tickets/done/2.md
@@ -1,6 +1,11 @@
 # Determine licensing and contribution protocol.
 
-Author: Mārtiņš Avots
+----
+* SPDX-License-Identifier: EPL-2.0 OR MIT
+* SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
+----
+
+Initial Author: Mārtiņš Avots
 
 This is no lawyer advice, the following only represents some contributor opinions and understanding.
 
@@ -245,8 +250,8 @@ __license__ = "EPL-2.0 OR MIT"
 ```
 
 ----
-SPDX-License-Identifier: EPL-2.0 OR MIT
-SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
+* SPDX-License-Identifier: EPL-2.0 OR MIT
+* SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
 ```
 > For CommonMark files the meta data should be at the end of the document,
 > because not every renderer can display meta data in a nice way.
@@ -380,3 +385,7 @@ as they are needed.
 # Interesting Third Party Documents
 
 * [ASF 3rd Party License Policy](https://www.apache.org/legal/resolved.html)
+
+----
+* SPDX-License-Identifier: EPL-2.0 OR MIT
+* SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
