--- a/src/main/md/net/splitcells/network/tickets/done/77.md
+++ b/src/main/md/net/splitcells/network/tickets/done/77.md
@@ -19,3 +19,7 @@ PlantUML seems to be pretty heavy and there does not seem to be client side
 implementation for i.e. browsers. So, an alternative would be nice. Maybe plain
 svg with a good template?
 [Mermaid](https://mermaid-js.github.io/mermaid/#/) may be a good alternative.
+
+----
+* SPDX-License-Identifier: EPL-2.0 OR MIT
+* SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
