--- a/src/main/md/net/splitcells/network/tickets/open/10.md
+++ b/src/main/md/net/splitcells/network/tickets/open/10.md
@@ -9,3 +9,7 @@ complex.
 * TODO: Ensure that Java source code in Dem comply with this grammar,
   in order to be sure, that the grammar is at least somewhat battle tested.
   The grammar does not have to be valid for Java bootstrap code.
+
+----
+* SPDX-License-Identifier: EPL-2.0 OR MIT
+* SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
