--- a/src/main/md/net/splitcells/network/tickets/open/71.md
+++ b/src/main/md/net/splitcells/network/tickets/open/71.md
@@ -6,3 +6,7 @@
 * TODO: Create first article.
 * DONE: Use standardized file structure for this project.
 * TODO: Support Gemini protocol.
+
+----
+* SPDX-License-Identifier: EPL-2.0 OR MIT
+* SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
