--- a/src/main/md/net/splitcells/network/tickets/open/72.md
+++ b/src/main/md/net/splitcells/network/tickets/open/72.md
@@ -1,4 +1,8 @@
 # Improve Software Quality
 For Java projects based on Maven automatic software can be used,
 in order to find some issues.
-The command `mvn site -P report` analaysis the code and creates a report. 
+The command `mvn site -P report` analaysis the code and creates a report.
+
+----
+* SPDX-License-Identifier: EPL-2.0 OR MIT
+* SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
