--- a/src/main/md/net/splitcells/network/tickets/done/0.md
+++ b/src/main/md/net/splitcells/network/tickets/done/0.md
@@ -1,1 +1,5 @@
 # Publish net.splitcells.network
+
+----
+* SPDX-License-Identifier: EPL-2.0 OR MIT
+* SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
