--- a/src/main/md/net/splitcells/network/tickets/open/37.md
+++ b/src/main/md/net/splitcells/network/tickets/open/37.md
@@ -6,3 +6,7 @@
 * TODO: Simplify image paths.
 * TODO: Support default layout with no background images. Images should only be added by extensions.
 * TODO: Simplify css.
+
+----
+* SPDX-License-Identifier: EPL-2.0 OR MIT
+* SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
