#215 Remove deprecated licensing info.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/src/main/md/net/splitcells/network/tickets/done/2.md
+++ b/src/main/md/net/splitcells/network/tickets/done/2.md
@@ -385,6 +385,7 @@ as they are needed.
 # Interesting Third Party Documents
 
 * [ASF 3rd Party License Policy](https://www.apache.org/legal/resolved.html)
+* [The installer of GPL software seems to not have to be licensed under GPL.](https://www.gnu.org/licenses/gpl-faq.html#GPLCompatInstaller)
 
 ----
 * SPDX-License-Identifier: EPL-2.0 OR MIT
