#78 Add missing license data.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/src/main/md/net/splitcells/network/tickets/done/2.md
+++ b/src/main/md/net/splitcells/network/tickets/done/2.md
@@ -1,9 +1,8 @@
-# Determine licensing and contribution protocol.
-
 ----
 * SPDX-License-Identifier: EPL-2.0 OR MIT
 * SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
 ----
+# Determine licensing and contribution protocol.
 
 Initial Author: Mārtiņš Avots
 
@@ -215,8 +214,17 @@ listed source code repository logs.
 For short Bash/sh scripts a license header is not required.
 
 ```
-SPDX-License-Identifier: EPL-2.0 OR MIT
-SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
+/*
+ * Copyright (c) 2021 Mārtiņš Avots (Martins Avots) and others
+ *
+ * This program and the accompanying materials are made available under the
+ * terms of the Eclipse Public License 2.0, which is available at
+ * http://www.eclipse.org/legal/epl-2.0, or the MIT License,
+ * which is available at https://spdx.org/licenses/MIT.html.
+ *
+ * SPDX-License-Identifier: EPL-2.0 OR MIT
+ * SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
+ */
 ```
 > This is the license header template for Java files.
 
@@ -256,6 +264,16 @@ __license__ = "EPL-2.0 OR MIT"
 > For CommonMark files the meta data should be at the end of the document,
 > because not every renderer can display meta data in a nice way.
 > The empty line at the start of the suffix ensures, that it is rendered correctly.
+
+If the file is too big and therefore the license info is too far away from the start,
+the license info should be at the very start of the document in the following way:
+
+```
+----
+* SPDX-License-Identifier: EPL-2.0 OR MIT
+* SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
+----
+```
 
 ### License File
 
