#78 Give reason for the large Java license headers.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/src/main/md/net/splitcells/network/tickets/done/2.md
+++ b/src/main/md/net/splitcells/network/tickets/done/2.md
@@ -228,6 +228,11 @@ For short Bash/sh scripts a license header is not required.
 ```
 > This is the license header template for Java files.
 
+A long header is maintained, because most other projects seem to be doing this for Java files.
+It is suspected, that this is needless, as long it is part of a repo,
+where this info is present and easily notable.
+Maybe the short only SPDX version will be enough in the future.
+
 ```
 # SPDX-License-Identifier: EPL-2.0 OR MIT
 # SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
